--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -20,5 +21,9 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "exports": {
+    "./other": "./dist/other.js",
+    ".": "./dist/index.js"
   }
 }
